--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
 
 
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'commons-io:commons-io:2.11.0' // Versions from 2.9.0 to 2.11.0 give NoClassDefFoundError on old devices
+    implementation 'commons-io:commons-io:2.11.0'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'commons-net:commons-net:3.9.0'
     implementation 'androidx.lifecycle:lifecycle-process:2.5.1' //Не обновлять
@@ -60,6 +60,6 @@ dependencies {
     implementation files('libs/geonames-1.1.14.jar')
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'jp.wasabeef:picasso-transformations:2.2.1'
-    implementation 'org.jdom:jdom:1.1.3'
+    implementation 'org.jdom:jdom:1.1.3' //для геоимен
 
 }
